--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,25 @@
   <meta charset="utf-8">
   <title>LandingPage</title>
   <base href="/">
+  <style>
+    @font-face {
+      font-family: OpenSans;
+      src: url('./assets/fonts/OpenSans-Regular.woff');
+    }
+    h1, a, p, button, label {
+      font-family: OpenSans
+    }
+  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background-image: url(assets/Fondo_blanco.png);">
   <app-root></app-root>
 </body>
+<!-- <body style="background-image: url(assets/Fondo_blanco.png); background-size: cover; background-position: center; background-repeat: no-repeat;
+  font-family: 'Open Sans';">
+  <app-root></app-root>
+</body> -->
 </html>
