href base href var

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>LandingPage</title>
-  <base href="/">
+  <base href="%BASE_HREF%">
   <style>
     @font-face {
       font-family: OpenSans;
