changes all the image sources. Deletes amenities and location sources from .css

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <style>
     @font-face {
       font-family: OpenSans;
-      src: url('./assets/fonts/OpenSans-Regular.woff');
+      src: url('assets/fonts/OpenSans-Regular.woff');
     }
     h1, a, p, button, label {
       font-family: OpenSans
