--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-<body style="background-image: url(assets/Fondo_blanco.png);">
-  <app-root></app-root>
+<!-- <body style="background-image: url(assets/Fondo_blanco.png);"> -->
+<body>
+
+<!-- <app-root></app-root> -->
 </body>
 <!-- <body style="background-image: url(assets/Fondo_blanco.png); background-size: cover; background-position: center; background-repeat: no-repeat;
-  font-family: 'Open Sans';">
+  font-family: 'Open Sans';">-->
   <app-root></app-root>
-</body> -->
+</body> 
 </html>
